# grid-filler

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: run-tests.yml
grid_filler/: __init__.py  basic_filler.py  grid.py  grid_manager.py  light.py
grid_filler/display/: big_letters.py  big_print.py
tests/: conftest.py  test_grid.py  test_light.py
themes/: languages.txt
