[tool.poetry]
name = "grid-filler"
version = "0.1.0"
description = "A program to fit theme words from a small dictionary into a crossword grid, while maintaining the ability to complete the rest of the grid from a full dictionary"
authors = ["Fred Cook <fred@fredcook.co.uk>"]
license = "MIT"
readme = "README.md"
packages = [{include = "grid_filler"}]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
