[project]
name = "grid_filler"
version = "0.1.0"
description = "A program to fit theme words from a small dictionary into a crossword grid, while maintaining the ability to complete the rest of the grid from a full dictionary"
authors = [{ name = "Fred Cook", email = "fred@fredcook.co.uk" }]
requires-python = "~=3.9"
readme = "README.md"
license = "MIT"
dependencies = ["numpy>=1.25.0,<2"]

[dependency-groups]
test = [
    "pytest>=7.4.0,<8",
    "pytest-cov>=4.1.0,<5",
    "ruff>=0.0.278,<0.0.279",
]

[tool.uv]
default-groups = ["test"]

[tool.hatch.build.targets.sdist]
include = ["grid_filler"]

[tool.hatch.build.targets.wheel]
include = ["grid_filler"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
ignore = ["E741"] # ignore ambiguous names
